--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 <hello name="{{ name }}"></hello>
 <p>
-  Start editing to see some magic happen :)
+	Start editing to see some magic happen :)
 </p>
+<div>
+	<ul>
+		<li> Apple</li>
+		<li> Orange</li>
+		<li> Strawberry</li>
+	</ul>
+</div>
